--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "freeboard_frontend",
+  "name": "class",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -21,7 +22,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.11",
+    "@graphql-codegen/typescript": "^2.8.1",
+    "@types/node": "17.0.2",
+    "@types/react": "17.0.2",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "typescript": "^4.8.4"
+  },
+  "resolutions": {
+    "types/react": "17.0.2"
   }
 }
