--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-player": "^2.11.0"
+    "react-player": "^2.11.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
