--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@types/react-slick": "^0.23.10",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "graphql": "^16.6.0",
