--- a/package.json
+++ b/package.json
@@ -10,27 +10,33 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
+    "@ant-design/icons": "^4.8.0",
     "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@types/react-slick": "^0.23.10",
     "antd": "^4.23.6",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.1.3",
     "graphql": "^16.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.11.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
     "@graphql-codegen/typescript": "^2.8.1",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.0.0",
