--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@types/lodash": "^4.14.190",
     "@types/react-slick": "^0.23.10",
     "antd": "^4.23.6",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.1.3",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
