--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^4.12.4",
     "@types/lodash": "^4.14.190",
     "@types/react-slick": "^0.23.10",
@@ -26,12 +27,14 @@
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.40.0",
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.11.0",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
     "slick-carousel": "^1.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
