--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.12.4",
     "@types/lodash": "^4.14.190",
     "@types/react-slick": "^0.23.10",
+    "@types/zen-observable": "^0.8.3",
     "antd": "^4.23.6",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.1.3",
@@ -37,7 +38,8 @@
     "recoil": "^0.7.6",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zen-observable": "^0.10.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
